--- a/aquaparko/aquaparko.csproj
+++ b/aquaparko/aquaparko.csproj
@@ -9,7 +9,9 @@
 
   <ItemGroup>
     <None Remove="circle.png" />
-    <None Remove="logotype_2.png" />
+    <None Remove="food.png" />
+    <None Remove="logonow.png" />
+    <None Remove="spa.png" />
     <None Remove="waves3.png" />
   </ItemGroup>
 
@@ -23,7 +25,9 @@
 
   <ItemGroup>
     <Resource Include="circle.png" />
-    <Resource Include="logotype_2.png" />
+    <Resource Include="food.png" />
+    <Resource Include="logonow.png" />
+    <Resource Include="spa.png" />
     <Resource Include="waves3.png" />
   </ItemGroup>
 
